# SmartExpense

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_dataset.py
alembic/: env.py
alembic/versions/: 8bb72ea7d4e5_add_document_type_and_expense_items.py  c4f9a2e1d830_add_users_and_user_id_to_expenses.py  c6bce9a371b4_create_expenses_table.py
app/: main.py
app/api/v1/routes/: auth.py  expenses.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  expense.py  expense_item.py  user.py
app/schemas/: auth.py  expense.py
app/services/: ai_base.py  classifier.py  ocr.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.test.ts  auth.ts  client.test.ts  client.ts  expenses.test.ts  expenses.ts
frontend/src/components/: Layout.test.tsx  Layout.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/pages/: DashboardPage.test.tsx  DashboardPage.tsx  ExpenseDetailPage.test.tsx  ExpenseDetailPage.tsx  ExpenseEditPage.test.tsx  ExpenseEditPage.tsx  ExpensesPage.test.tsx  ExpensesPage.tsx  LoginPage.test.tsx  LoginPage.tsx  RegisterPage.test.tsx  RegisterPage.tsx  UploadPage.test.tsx  UploadPage.tsx
frontend/src/test/: setup.ts
tests/: conftest.py  test_auth.py  test_endpoints.py  test_expense_isolation.py  test_expenses_edge_cases.py  test_security.py  test_services.py
