[project]
name = "smartexpense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "black>=26.5.1",
    "fastapi>=0.138.0",
    "groq>=0.37.1",
    "instructor>=1.15.3",
    "kaggle>=2.2.2",
    "langchain-groq>=1.1.3",
    "load-dotenv>=0.1.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
